force-app/main/default/objects/Service_Itemm__c/Service_Itemm__c.object-meta.xml
<CustomObject>
    <label>Service Itemm</label>
    <nameField>
        <displayFormat>SI-{00000}</displayFormat>
        <label>Service Itemm Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Itemms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>