force-app/main/default/objects/Service_Itemm__c/fields/Inventory_Itemm__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Itemm__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inventory Itemm</label>
    <referenceTo>Inventory_Itemm__c</referenceTo>
    <relationshipLabel>Service Itemms</relationshipLabel>
    <relationshipName>Service_Itemms</relationshipName>
    <type>Lookup</type>
</CustomField>