force-app/main/default/objects/Service_Itemm__c/fields/Service_Orderr__c.field-meta.xml
<CustomField>
    <fullName>Service_Orderr__c</fullName>
    <label>Service Orderr</label>
    <referenceTo>Service_Orderr__c</referenceTo>
    <relationshipLabel>Service Itemms</relationshipLabel>
    <relationshipName>Service_Itemms</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>