force-app/main/default/objects/Service_Itemm__c/fields/Tax_Percent__c.field-meta.xml
<CustomField>
    <fullName>Tax_Percent__c</fullName>
    <label>Tax Percent</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>