force-app/main/default/objects/Service_Itemm__c/fields/Technician__c.field-meta.xml
<CustomField>
    <fullName>Technician__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Technician</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Service_Itemms</relationshipName>
    <type>Lookup</type>
</CustomField>