force-app/main/default/objects/Service_Itemm__c/validationRules/Cancelled_Notes_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Cancelled_Notes_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Item_Status__c, &quot;Cancelled&quot;),
    ISBLANK(Notes__c)
)</errorConditionFormula>
    <errorMessage>Please provide Notes when cancelling a service item</errorMessage>
</ValidationRule>