force-app/main/default/objects/Service_Itemm__c/validationRules/Completed_Date_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Completed_Date_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Item_Status__c, &quot;Completed&quot;),
    ISBLANK(Completed_Date__c)
)</errorConditionFormula>
    <errorDisplayField>Completed_Date__c</errorDisplayField>
    <errorMessage>Completed date is required when item status is completed</errorMessage>
</ValidationRule>