force-app/main/default/objects/Service_Itemm__c/validationRules/Discount_Invalid.validationRule-meta.xml
<ValidationRule>
    <fullName>Discount_Invalid</fullName>
    <active>true</active>
    <errorConditionFormula>OR(  Discount_Percent__c &lt; 0 ,  Discount_Percent__c &gt; 100 )</errorConditionFormula>
    <errorDisplayField>Discount_Percent__c</errorDisplayField>
    <errorMessage>Discount must be between 100%</errorMessage>
</ValidationRule>