force-app/main/default/objects/Service_Itemm__c/validationRules/Part_Inventory_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Part_Inventory_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Item_Type__c, &quot;Part&quot;),
    ISBLANK(Inventory_Itemm__c)
)</errorConditionFormula>
    <errorDisplayField>Inventory_Itemm__c</errorDisplayField>
    <errorMessage>Please select an inventory item for a part</errorMessage>
</ValidationRule>