force-app/main/default/objects/Service_Itemm__c/validationRules/Quantity_Invalid.validationRule-meta.xml
<ValidationRule>
    <fullName>Quantity_Invalid</fullName>
    <active>true</active>
    <errorConditionFormula>Quantity__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>Quantity__c</errorDisplayField>
    <errorMessage>Quantity must be greater than zero</errorMessage>
</ValidationRule>