force-app/main/default/objects/Service_Itemm__c/validationRules/Service_No_Inventory.validationRule-meta.xml
<ValidationRule>
    <fullName>Service_No_Inventory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Item_Type__c, &quot;Service&quot;),
    NOT(ISBLANK(Inventory_Itemm__c))
)</errorConditionFormula>
    <errorDisplayField>Inventory_Itemm__c</errorDisplayField>
    <errorMessage>A Service item cannot be linked to an Inventory Item</errorMessage>
</ValidationRule>