force-app/main/default/objects/Service_Itemm__c/validationRules/Tax_Invalid.validationRule-meta.xml
<ValidationRule>
    <fullName>Tax_Invalid</fullName>
    <active>true</active>
    <errorConditionFormula>OR( Tax_Percent__c &lt; 0, Tax_Percent__c &gt; 100)</errorConditionFormula>
    <errorDisplayField>Tax_Percent__c</errorDisplayField>
    <errorMessage>Tax must be between 0 and 100%</errorMessage>
</ValidationRule>