force-app/main/default/objects/Service_Itemm__c/validationRules/Unit_Price_Invalid.validationRule-meta.xml
<ValidationRule>
    <fullName>Unit_Price_Invalid</fullName>
    <active>true</active>
    <errorConditionFormula>Unit_Price__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Unit_Price__c</errorDisplayField>
    <errorMessage>Unit Price cannot be negative.</errorMessage>
</ValidationRule>